--- a/web/Styles/_header.scss
+++ b/web/Styles/_header.scss
@@ -7,6 +7,13 @@
     padding: .1em;
 }
 
+.colPaddingHeader {
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 0;
+    padding-right: .5em;;
+}
+
 .companySubtext {
     font-size: .7rem;
     color: $gray-200;
@@ -24,8 +31,7 @@
 }
 
 #custom-search-input input {
-    border: 0;
-   
+    border: 0;  
     box-shadow: none;
     background-color: $gray-100;
     padding: .1rem;
