--- a/web/Views/Shared/_Layout.cshtml
+++ b/web/Views/Shared/_Layout.cshtml
@@ -12,22 +12,19 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark headerBg">
-        <div class="col colPaddingOne flex-grow-0">
+    <nav class="navbar navbar-expand-lg navbar-dark headerBg row">
+        <div class="col">
             <object data="images/TekOnsite_logo.svg" type="image/svg+xml" style="height: 40px;"></object>
-        </div>
-        <div class="col colPaddingOne">
             <span class="companySubtext">A Sample Group Company</span>
         </div>
-        <div class="col-5 my-auto colPaddingOne">
-            <h6 class="ml-2 text-light">Manage Technicians and Work Orders</h6>
+        <div class="col-5 my-auto colPaddingHeader">
+            <h6 class="ml-2 mt-1 text-light">Manage Technicians and Work Orders</h6>
         </div>
-        <div class="col colPaddingOne">
+        <div class="col colPaddingHeader">
             <form class="form-inline">
-
                 <div id="custom-search-input">
                     <div class="input-group">
-                        <input type="text" class="m-0 p-0 form-control" placeholder="Search" />
+                        <input type="text" class="form-control" placeholder="Search" />
                         <span class="border-0 bg-transparent pr-1 pl-1 pt-0 pb-0">
                             <button type="button" class="glyphicon-search">
                                 <span class="fa fa-search"></span>
@@ -35,14 +32,13 @@
                         </span>
                     </div>
                 </div>
-
             </form>
         </div>
     </nav>
 </header>
 <div class="container-fluid">
     <div class="col-4">
-        <partial name="_sideBar"/>
+        @*@await Component.InvokeAsync(Side)*@
     </div>
     <main role="main" class="col-8">
         @RenderBody()
