Updated contact form - playing with partials vs view components

--- a/web/Views/Shared/_Layout.cshtml
+++ b/web/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
         </div>
         <div class="col-5 my-auto colPaddingHeader">
             <h6 class="ml-2 mt-1 text-light">Manage Technicians and Work Orders</h6>
+
         </div>
         <div class="col colPaddingHeader">
             <form class="form-inline">
@@ -38,6 +39,8 @@
 </header>
 <div class="container-fluid">
     <div class="col-4">
+        <a asp-controller="Admin" asp-action="AddUser">Add User</a>
+
         @*@await Component.InvokeAsync(Side)*@
     </div>
     <main role="main" class="col-8">
